Implement game over screens, make winning conditions for level 1 and 2, replace broken wires with a black variant of it